fix: color contrast for theme toggler

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -20,4 +20,13 @@
     flex-direction: column-reverse;
     align-items: flex-start;
   }
+
+  .footer ul > li {
+    margin-right: 0px;
+  }
+
+  .footer ul > li > a {
+    padding: 8px;
+    font-size: 20px
+  }
 }
