--- a/styles/theme/dark.css
+++ b/styles/theme/dark.css
@@ -5,12 +5,12 @@
   --text-color-light: #ffffff99;
   --text-color-normal: #ffffffde;
   --bg-dots: #1d1d1d;
-  --theme-toggler: #eec413;
+  --theme-toggler: #e2ff00;
   --bg-btn: #3b3b3b;
   --btn-border: hsl(0deg 0% 23%);
   --btn-bsdow: #000000a6;
   --color-link: #3F99FF;
-  --color-hand: #fff;
+  --color-hand: #b4836d;
   --color-email: #e2ff00;
   --color-link-focus: #e2ff00;
 }
